@@ -66,7 +66,7 @@ public class MoveTextHandler extends CommandHandler
         editor.getDocument().deleteString(range.getStartOffset(), range.getEndOffset());
 
         int offset = CommandGroups.getInstance().getMotion().moveCaretToLineStart(editor, line + 1);
-        CommandGroups.getInstance().getCopy().putText(editor, context, offset, text, Command.FLAG_MOT_LINEWISE, 1);
+        CommandGroups.getInstance().getCopy().putText(editor, context, offset, text, Command.FLAG_MOT_LINEWISE, 1, true);
 
         return true;
     }
