@@ -64,11 +64,11 @@ public class PutLinesHandler extends CommandHandler
         MotionGroup.moveCaret(editor, context, EditorHelper.getLineStartOffset(editor, line));
         if (before)
         {
-            return CommandGroups.getInstance().getCopy().putTextBeforeCursor(editor, context, 1);
+            return CommandGroups.getInstance().getCopy().putTextBeforeCursor(editor, context, 1, true);
         }
         else
         {
-            return CommandGroups.getInstance().getCopy().putTextAfterCursor(editor, context, 1);
+            return CommandGroups.getInstance().getCopy().putTextAfterCursor(editor, context, 1, true);
         }
     }
 }
