@@ -27,10 +27,10 @@ import com.maddyhome.idea.vim.handler.ChangeEditorActionHandler;
 
 /**
  */
-public class PutTextAfterCursorHandler extends ChangeEditorActionHandler
+public class PutTextBeforeCursorNoIndentHandler extends ChangeEditorActionHandler
 {
     public boolean execute(Editor editor, DataContext context, int count, int rawCount, Argument argument)
     {
-        return CommandGroups.getInstance().getCopy().putTextAfterCursor(editor, context, count, true);
+        return CommandGroups.getInstance().getCopy().putTextBeforeCursor(editor, context, count, false);
     }
 }
